<resources>
    <string name="app_name">Carrot_Market</string>
    <string name="menu_home">홈</string>
    <string name="menu_townlife">동네생활</string>
    <string name="menu_nearby">내 근처</string>
    <string name="menu_chatting">채팅</string>
    <string name="menu_my">나의 당근</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>